improve readibility, as per code scan comments
Signed-off-by: Stefano Braghin <527806+stefano81@users.noreply.github.com>