@@ -14,6 +14,10 @@ import com.ibm.research.drl.dpt.anonymization.ola.OLA;
 import com.ibm.research.drl.dpt.anonymization.ola.OLAOptions;
 import com.ibm.research.drl.dpt.configuration.AnonymizationOptions;
 import com.ibm.research.drl.dpt.datasets.IPVDataset;
+import com.ibm.research.drl.dpt.datasets.schema.IPVSchema;
+import com.ibm.research.drl.dpt.datasets.schema.IPVSchemaFieldType;
+import com.ibm.research.drl.dpt.datasets.schema.impl.SimpleSchema;
+import com.ibm.research.drl.dpt.datasets.schema.impl.SimpleSchemaField;
 import com.ibm.research.drl.dpt.providers.ProviderType;
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
@@ -29,7 +33,6 @@ public class NonUniformEntropyTest {
 
     @Test
     public void testNonUniformEntropy() {
-
         IPVDataset original = new IPVDataset(1);
         original.addRow(Arrays.asList("1"));
         original.addRow(Arrays.asList("2"));
@@ -56,7 +59,7 @@ public class NonUniformEntropyTest {
 
         double upperBound = 4 * (-log2(0.25));
         
-        Double ne = nonUniformEntropy.report();
+        double ne = nonUniformEntropy.report();
 
         assertEquals(4.0, ne, 0.01);
         assertEquals(upperBound, nonUniformEntropy.getUpperBound(), 0.01);
@@ -91,7 +94,7 @@ public class NonUniformEntropyTest {
 
         double upperBound = 4 * (-log2(0.25));
 
-        Double ne = nonUniformEntropy.report();
+        double ne = nonUniformEntropy.report();
 
         assertEquals(4.0 * 0.5, ne, 0.01);
         assertEquals(upperBound, nonUniformEntropy.getUpperBound(), 0.01);
@@ -126,7 +129,7 @@ public class NonUniformEntropyTest {
 
         double upperBound = 4 * (-log2(0.25));
 
-        Double ne = nonUniformEntropy.report();
+        double ne = nonUniformEntropy.report();
 
         assertEquals(0.0, ne, 0.01);
         assertEquals(upperBound, nonUniformEntropy.getUpperBound(), 0.01);
@@ -269,7 +272,7 @@ public class NonUniformEntropyTest {
         int[] kValues  = new int[] {2, 4, 5, 8, 10};
         double suppression = 20.0;
 
-        Double lastUpper = null;
+        double lastUpper = Double.NaN;
         
         for(int k: kValues) {
             List<PrivacyConstraint> privacyConstraints = new ArrayList<>();
@@ -284,10 +287,8 @@ public class NonUniformEntropyTest {
             NonUniformEntropy entropy = new NonUniformEntropy();
             entropy.initialize(original, anonymized, ola.getOriginalPartitions(), ola.getAnonymizedPartitions(), columnInformation, ola.reportBestNode().getValues(), null);
             
-            System.out.println(entropy.getLowerBound() + ":" + entropy.getUpperBound());
-            
-            if (lastUpper != null) {
-                assertEquals(lastUpper.doubleValue(), entropy.getUpperBound(), 0.000000001);
+            if (!Double.isNaN(lastUpper)) {
+                assertEquals(lastUpper, entropy.getUpperBound(), 0.000000001);
             }
             
             lastUpper = entropy.getUpperBound();
@@ -297,17 +298,19 @@ public class NonUniformEntropyTest {
     @Test
     public void testNonUniformEntropyNoLoss() {
 
-        IPVDataset original = new IPVDataset(1);
-        original.addRow(Arrays.asList("1"));
-        original.addRow(Arrays.asList("2"));
-        original.addRow(Arrays.asList("3"));
-        original.addRow(Arrays.asList("4"));
+        IPVDataset original = new IPVDataset(List.of(
+                Arrays.asList("1"),
+                Arrays.asList("2"),
+                Arrays.asList("3"),
+                Arrays.asList("4")),
+                new SimpleSchema("foo", List.of(new SimpleSchemaField("Column 0", IPVSchemaFieldType.STRING))), true);
 
-        IPVDataset anonymized = new IPVDataset(1);
-        anonymized.addRow(Arrays.asList("1"));
-        anonymized.addRow(Arrays.asList("2"));
-        anonymized.addRow(Arrays.asList("3"));
-        anonymized.addRow(Arrays.asList("4"));
+        IPVDataset anonymized = new IPVDataset(List.of(
+                Arrays.asList("1"),
+                Arrays.asList("2"),
+                Arrays.asList("3"),
+                Arrays.asList("4")),
+                new SimpleSchema("bar", List.of(new SimpleSchemaField("Column 0", IPVSchemaFieldType.STRING))), true);
 
         List<ColumnInformation> columnInformationList = new ArrayList<>();
         columnInformationList.add(new CategoricalInformation(null, ColumnType.QUASI));
